# adventofcode2020

./: Cargo.toml  README.md
inputs/: day4.txt  day4test2.txt  day6.txt
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
