[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Mark Schultz <mdschultz@eng.ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

paste = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
itertools = "0.9"
